--- a/wind/8452660.md
+++ b/wind/8452660.md
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Wind NOAA 8452660---
+
 year | file
 ------|------
 2004  |[``.mat``](Data/wind/8452660/2004/wind_2004_8452660.mat) [``.csv``](Data/wind/8452660/2004/wind_2004_8452660.csv) [metadata](Data/wind/8452660/2004/README_wind_2004_8452660.json)
