--- a/wind/8454049.md
+++ b/wind/8454049.md
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Wind NOAA 8454049---
+
 year | file
 ------|------
 2004  |[``.mat``](Data/wind/8454049/2004/wind_2004_8454049.mat) [``.csv``](Data/wind/8454049/2004/wind_2004_8454049.csv) [metadata](Data/wind/8454049/2004/README_wind_2004_8454049.json)
