copied from wind.md

--- a/wind/8452660.md
+++ b/wind/8452660.md
@@ -1,7 +1,6 @@
 ---
 layout: default
-title: Wind NOAA station 8452660
+title: Directing to wind station pages
 ---
 
-### Station: 8452660
-
+## NOAA wind data in yearly documents
